--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -22,8 +22,9 @@
             <h5 jsonget="title" class="mb1"></h5>
             <img class="w90 pb1" src="" jsonbefore="../../../" jsonget="image">
             <h7 jsonget="summary"></h7>
-            <small jsonget="designer" jsonbefore="Designed by: "></small>
-            <small jsonget="adopted" jsonbefore="Adopted: "></small>
+            <small jsonget="license" jsonbefore="License: "></small>
+            <small jsonget="designer" jsonbefore="Designer: "></small>
+            <small jsonget="adopted" jsonbefore="Adoption: "></small>
             <a target="_blank" class="button mt2 bcred" href="{{ jsonget:image }}" globalize="download" download>Download</a>
         </figure>
     </div>
