--- a/contribute/index.html
+++ b/contribute/index.html
@@ -14,7 +14,7 @@
         <h4 class="fs16 mb1" globalize="page_contribute_text1"></h4>
         <p globalize="page_contribute_text2"></p>
         <br>
-        <form action="https://www.paypal.com/donate" method="post" target="_blank">
+        <form action="https://www.paypal.com/donate" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
             <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
         </form>
