--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -15,9 +15,16 @@
     </nav>
 
     <article class="mt2">
-        <p class="fwb">The State of Israel recognizes the Arameans as separate nationality in Israel.</p>
+        <p class="fwb">A significant and historical event: Israel is the first country in the world to acknowledge Aramean minoritiy living in Israel as a distinct ethnicity.</p>
+        <p>Several scholars consulted with the Ministry of Interior before making the announcement, and based on their advice Minister Gideon Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
+        <br>
+        <p>The historical heritage, religion, culture, origin and shared language met the conditions of proving the existince of the Aramean nation.</p>
+        <br>
+        <p>In December 2014, the Registration and Passports Section of the Population and Immigration Authority published its guidelines on the subject, whose provision permits Arameans to claim their identities.</p>
+        <p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-07-02, Last update: 2021-07-02</small>
+        <small class="gray">Published: 2021-07-02, Last update: 2021-07-13</small>
+        <small class="gray">Source: <a target="_blank" href="https://m.knesset.gov.il/EN/activity/mmm/Arameans_in_the_Middle_%20East_and_%20Israel.pdf">Knesset Research and Information Center</a></small>
     </article>
 
 </section>
