--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -18,7 +18,7 @@
         <p class="fwb">A significant and historical event: Israel is the first country in the world to acknowledge Aramean minoritiy living in Israel as a distinct ethnicity.</p>
         <p>Several scholars consulted with the Ministry of Interior before making the announcement, and based on their advice Minister Gideon Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
         <br>
-        <p>There were many aspects to prove the existence of the Aramean nation, including a shared language, a heritage, a religion, and a culture./p>
+        <p>There were many aspects to prove the existence of the Aramean nation, including a shared language, a heritage, a religion, and a culture.</p>
         <br>
         <p>In December 2014, the Registration and Passports Section of the Population and Immigration Authority published its guidelines on the subject, whose provision permits Arameans to claim their identities.</p>
         <p>
