--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Aram and Israel relations" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>Aram and Israel relations</title>
 
 <template>
     <aside index="0"></aside>
