--- a/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
+++ b/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="The holy language of Tur Abdin" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>The holy language of Tur Abdin</title>
 
 <template>
     <aside index="0"></aside>
