--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Israel recognizes the Arameans as separate nationality" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>Israel recognizes the Arameans as separate nationality</title>
 
 <template>
     <aside index="0"></aside>
