--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="The Kaldu-Arameans in Babylon" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>The Kaldu-Arameans in Babylon</title>
 
 <template>
     <aside index="0"></aside>
