--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -17,7 +17,7 @@
     </nav>
 
     <article class="mt2">
-        <p class="fwb">Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire.</p>
+        <p class="fwb">Chaldeans are Arameans from the tribe of Kaldu or (Kasdu)<sup>[1]</sup> conquering and destroying the Assyrian Empire.</p>
         <br>
         <p>According to the Babylon Clay tablet found in the 19th century, the Assyrians and the Babylonians had a 12-year long struggle between Assyria and Babylon, as well as Assyrians having internal conflicts within Assyria itself. 
         <br><br>In the tenth year of Nabopolassar (616 BC), the Babylonians defeated the Assyrian army and marched up the river, sacking Mane, Sahiri, and Baliḫu.
@@ -29,6 +29,7 @@
         <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance that King Nabopolassar formed. After a brutal battle, Nineveh fell and it led to the destruction of the Neo-Assyrian Empire and with it the Assyrian people over a few years.</p><br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-05-14</small>
+        <small class="gray">Source: <a target="_blank" href="https://www.britannica.com/topic/Aramaean">Encyclopædia Britannica</a> <sup>[1]</sup></small>
     </article>
 
 </section>
