--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -19,9 +19,9 @@
     <article class="mt2">
         <p class="fwb">A significant and historical event: Israel is the first country in the world to acknowledge Aramean minoritiy living in Israel as a distinct ethnicity.</p>
         <br>
-        <p>Several scholars consulted with the Ministry of Interior before making the announcement and based on their expert advice and the evidence Minister Gideon Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
+        <p>Several scholars consulted with the Ministry of Interior before making the announcement based on their expert advice, and the evidence, Minister Gideon Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
         <br>
-        <p>There were many aspects proving the existence of the Aramean nation, including a shared language, a seperate heritage, a religion, and a culture.</p>
+        <p>Many aspects proved the existence of the ancient Aramean nation, including a shared language, a separate heritage, a religion, and a culture.</p>
         <br>
         <p>In December 2014, the Registration and Passports Section of the Population and Immigration Authority published its guidelines on the subject, whose provision permits Arameans to claim their real ethnic identities.</p>
         <p>
