--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -21,9 +21,9 @@
         <br>
         <p>According to the Bible, there were ongoing rivalries between Israel and its neighboring Aramean kingdoms, but there were also relations of trade and family between them.</p>
         <br>
-        <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Shem, son of Noah, but what ties their bound even stronger is Aram, son of Shem.</p>
+        <p>As Semitic races, both Arameans and Hebrews (Israelites) trace their lineage back to Shem, son of Noah. But what ties them even closer is Aram, son of Shem.</p>
         <br>
-        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings in the Middle East. He is regarded as being the ancestor of the Arameans and the Hebrews.</p>
+        <p>Shem's son Aram played a key role in the creation of many nations across the Middle East and is believed to be the ancestor of both the Arameans and the Hebrews.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-07-13</small>
     </article>
