--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
-    <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;globalize"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0"></script>
@@ -34,7 +33,7 @@
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
-        <a href="#menu" class="button xl_du red- p0 shade1"><i class="icon32">≡</i></a>
+        <a href="#menu" class="button xl_du bc0 red- p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a class="xl_dn" href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
         <a class="xl_dn" href="collection/statistics" key="1" globalize="statistics">Statistics</a>
@@ -43,10 +42,10 @@
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
-                <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&#10060;</i></a>
+                <a href="#" class="button xl_du bc0 yellow- p0 shade1"><i class="icon32">&#10060;</i></a>
                 <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
-            <section>
+            <section class="white-">
                 <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
                     <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
                     <hr class="p0">
