--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -2,7 +2,7 @@
 
 <template>
     <aside index="1">
-        <nav class="sidebar black w15 pt105" selective="true">
+        <nav class="sidebar black white- w15 pt105" selective="true">
             <h5 class="white pl2">Contents</h5>
             <ul>
                 <li><a href="#infocollect">1. What information do we collect?</a></li>
