--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -2,19 +2,19 @@
 
 <template>
     <aside index="1">
-        <nav class="sidebar bcred w15 pt105" selective="true">
+        <nav class="sidebar bcred yellow- w15 pt105" selective="true">
 
             <details open>
-                <summary globalize="overview">Overview</summary>
+                <summary class="white" globalize="overview">Overview</summary>
                 <a href="./research/ethnology" globalize="summary">1. Summary</a>
                 <a href="./research/ethnology/language.html" globalize="language">2. Language</a>
                 <a href="./research/ethnology/religion.html" globalize="religion">3. Religion</a>
             </details>
 
             <details open>
-                <summary globalize="culture">Culture</summary>
+                <summary class="white" globalize="culture">Culture</summary>
                 <details>
-                    <summary globalize="language">Language</summary>
+                    <summary class="white" globalize="language">Language</summary>
                     <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
                     <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic">Official Aramaic</a>
                     <a href="#" globalize="middle_aramaic">Middle Aramaic</a>
@@ -22,7 +22,7 @@
                     <a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic">Modern Aramaic</a>
                 </details>
                 <details>
-                    <summary globalize="religion">Religion</summary>
+                    <summary class="white" globalize="religion">Religion</summary>
                     <a href="#" globalize="paganism">Paganism</a>
                     <a href="#" globalize="christianity">Christianity</a>
                 </details>
