--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Contact Us" template="../index"></script>
 
 <template>
     <aside index="0"></aside>
@@ -6,20 +6,40 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1 globalize="contribute">.</h1>
+    <h1 globalize="contact_us">Contact Us</h1>
 </div>
 
-<section class="pauto wc_xxl">
-    <article>
-        <h4 class="fs16 mb1" globalize="page_contribute_text1"></h4>
-        <p globalize="page_contribute_text2"></p>
-        <br>
-        <form action="" target="_blank">
-            <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
-        </form>
+<article class="pauto wc_xxl">
+    <section>
+        <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
+    </section>
+    <section>
+        <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
+                <div class="group">
+                    <input name="name" class="outlined phdark" type="text" globalize="full_name" placeholder="Full name" required>
+                </div>
+                <div class="group">
+                    <input name="email" class="outlined phdark" type="text" globalize="email" placeholder="Email" required>
+                </div>
+                <div class="group">
+                <select name="subject" class="outlined phdark">
+                    <option value="1" globalize="membership">Membership</option>
+                    <option value="2" globalize="cooperation">Cooperation</option>
+                    <option value="0" globalize="other" selected>Other</option>
+                </select>
+                </div>
 
-    </article>
-</section>
+                <div class="group" required>
+                    <textarea name="message" class="w100 h10r outlined phdark" globalize="message" placeholder="Message"></textarea>
+                </div>
+
+                <div class="gap1-">
+                    <button class="outlined" type="reset" globalize="reset">Reset</button>
+                    <button type="submit" globalize="send_message">Send message</button>
+                </div>
+        
+        </form>
+    </section>
+</article>
 
 <section include="./footer.html" class="bcred white white- p1"></section>
