--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Contact Us" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>Contact Us</title>
 
 <template>
     <aside index="0"></aside>
