--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Contact Us" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title>Contribute</title>
 
 <template>
     <aside index="0"></aside>
@@ -6,7 +8,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1 globalize="contact_us">Contact Us</h1>
+    <h1 globalize="contribute">Contribute</h1>
 </div>
 
 <article class="pauto wc_xxl">
