--- a/contribute/index.html
+++ b/contribute/index.html
@@ -16,7 +16,7 @@
         <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
     <section>
-        <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
+        <form action="https://www.paypal.com/donate" class="gaph2- mt2">
                 <div class="group">
                     <input name="name" class="outlined phdark" type="text" globalize="full_name" placeholder="Full name" required>
                 </div>
@@ -36,8 +36,7 @@
                 </div>
 
                 <div class="gap1-">
-                    <button class="outlined" type="reset" globalize="reset">Reset</button>
-                    <button type="submit" globalize="send_message">Send message</button>
+                    <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
                 </div>
         
         </form>
