--- a/contribute/index.html
+++ b/contribute/index.html
@@ -16,7 +16,7 @@
         <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
     <section>
-        <form action="https://www.paypal.com/donate" class="gaph2- mt2">
+        <form method="post" class="gaph2- mt2">
                 <div class="group">
                     <input name="name" class="outlined phdark" type="text" globalize="full_name" placeholder="Full name" required>
                 </div>
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="gap1-">
-                    <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
+                    <button type="submit" globalize="send_message">Send message</button>
                 </div>
         
         </form>
