--- a/contribute/index.html
+++ b/contribute/index.html
@@ -17,7 +17,7 @@
         <br>
         <form action="https://www.paypal.com/donate" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
+            <input class="button bcred yellow" globalize="page_contribute_text3">
         </form>
 
     </article>
