--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,5 +1,5 @@
 
-<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index" async></script>
 
 <template>
     <aside index="0"></aside>
@@ -17,7 +17,7 @@
         <br>
         <form action="https://www.paypal.com/donate" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input class="button bcred yellow" globalize="page_contribute_text3">
+            <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
         </form>
 
     </article>
