--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,5 +1,5 @@
 
-<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index" async></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index" defer></script>
 
 <template>
     <aside index="0"></aside>
