--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
     <header>
         <div id="navloader" class="navloader pa t0 w100 bcwhite02 d0"><div id="navprogress" class="bcwhite04"></div></div>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
-            <a class="fr bcred yellow p1" href="contribute/" key="2" globalize="contribute"><i class="icon">&#9829;</i>Contribute</a>
-            <a class="pr2" href="contact/" key="3" globalize="contact">Contact</a>
-            <!--<a class="pr2" href="press/" key="3">Press</a>-->
-            <a class="pr2" href="faq/" key="3" globalize="faq">FAQ</a>
-            <a class="pr2" href="about/" key="3" globalize="about">About</a>
+            <a class="fr bcred yellow p1" href="contribute/" globalize="contribute"><i class="icon">&#9829;</i>Contribute</a>
+            <a class="pr2" href="contact/" globalize="contact">Contact</a>
+            <!--<a class="pr2" href="press/">Press</a>-->
+            <a class="pr2" href="faq/" globalize="faq">FAQ</a>
+            <a class="pr2" href="about/" globalize="about">About</a>
         </nav>
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
         <a href="#menu" class="button xl_du bc0 red- p0 br0 shade1"><i class="icon32">≡</i></a>
-        <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
-        <a class="xl_dn" href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
-        <a class="xl_dn" href="collection/statistics" key="1" globalize="statistics">Statistics</a>
-        <a class="xl_dn" href="development/technology" key="3" globalize="technology">Technology</a>
-        <a class="xl_dn" href="development/arts" key="3" globalize="arts">Arts</a>
+        <figure><a class="b0" href="./"><img src="assets/img/logo.png"></a></figure>
+        <a class="xl_dn" href="research/ethnology" globalize="ethnology">Ethnology</a>
+        <a class="xl_dn" href="collection/statistics" globalize="statistics">Statistics</a>
+        <a class="xl_dn" href="development/technology" globalize="technology">Technology</a>
+        <a class="xl_dn" href="development/arts" globalize="arts">Arts</a>
 
         <div id="menu" class="modal menu bcred br0">
-            <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
+            <nav class="topbar flc0 shade h4_5 bcblack01 sblack-">
                 <a href="#" class="button xl_du bc0 yellow- p0 br0 shade1"><i class="icon32">&#10060;</i></a>
                 <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
