--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -1,5 +1,7 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../../index"></script>
-    
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="statistics">Statistics</title>
+
 <template>
     <aside index="0"></aside>
     <aside index="1"></aside>
