--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Arts" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="arts">Arts</title>
 
 <template>
     <aside index="0"></aside>
