--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
 
-<title>About Us</title>
+<title globalize="about_us">About Us</title>
 
 <template>
     <aside index="0"></aside>
