--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,5 +1,6 @@
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
 
-<script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="../index"></script>
+<title globalize="contribute">Contribute</title>
 
 <template>
     <aside index="0"></aside>
