--- a/faq/index.html
+++ b/faq/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Frequently Asked Questions​" template="../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+
+<title globalize="faq">Frequently Asked Questions​</title>
 
 <template>
     <aside index="0"></aside>
