--- a/policy/cookie/index.html
+++ b/policy/cookie/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Cookie Policy" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="cookie_policy">Cookie Policy</title>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>Cookie Policy</h1>
