--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Privacy Policy" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="privacy_policy">Privacy Policy</title>
 
 <template>
     <aside index="1">
