--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Ethnology" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="ethnology">Ethnology</title>
 
 <template>
     <aside index="1">
