--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Language" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+
+<title globalize="language">Language</title>
 
 <article class="pauto">
     <h1 globalize="language">Language</h1>
