--- a/research/ethnology/linguistics/modern_aramaic.html
+++ b/research/ethnology/linguistics/modern_aramaic.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Modern Aramaic" template="../../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../../index"></script>
+
+<title globalize="modern_aramaic">Modern Aramaic</title>
 
 <section class="pauto">
     <h1 globalize="modern_aramaic">Modern Aramaic</h1>
