--- a/research/ethnology/linguistics/official_aramaic.html
+++ b/research/ethnology/linguistics/official_aramaic.html
@@ -1,4 +1,6 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Official Aramaic" template="../../../index;../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../../index;../index"></script>
+
+<title globalize="official_aramaic">Official Aramaic</title>
 
 <section class="pauto">
     <h1 globalize="official_aramaic">Official Aramaic</h1>
