--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <h1 globalize="contact_us">Contact Us</h1>
 </div>
 
-<article class="pauto wc_xxl">
+<article class="pauto wc_xl">
     <section>
         <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
