--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
 
 <article class="pauto wc_xl">
     <section>
-        <h4 class="tac" globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
+        <h4 globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
     <section>
         <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
