--- a/contribute/index.html
+++ b/contribute/index.html
@@ -11,7 +11,7 @@
     <h1 globalize="contribute"></h1>
 </div>
 
-<section class="pauto wc_xxl">
+<section class="pauto wc_xl">
     <article>
         <h4 class="fs16 mb1" globalize="page_contribute_text1"></h4>
         <p globalize="page_contribute_text2"></p>
