--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <header></header>
     <nav></nav>
     <aside></aside>
-    <main class="flc">
+    <main class="flc fdc bcwhite h100">
         <a href="./" target="_top"><img class="w15" src="/assets/img/logo.png"></a></figure>
         <h1 class="z08">Page not found</h1>
         <i class="icon">&#8962;</i><a href="/">Go to startpage</a>
