--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" cache="no">
+<html lang="en;auto" cache="no">
 <head>
     <title>Aramean Institute | 404</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1" />
@@ -9,7 +9,7 @@
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
     <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
-    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
+    <script src="https://3el.github.io/front/dist/front.js" lib="nav;globalize"></script>
 </head>
 <body>
     <header></header>
@@ -17,8 +17,8 @@
     <aside></aside>
     <main class="flc fdc bcwhite h100">
         <a href="./" target="_top"><img class="w15" src="/assets/img/logo.png"></a></figure>
-        <h1 class="z08">Page not found</h1>
-        <i class="icon">&#8962;</i><a href="/">Go to startpage</a>
+        <h1 class="z08" globalize="page_not_found">Page not found</h1>
+        <i class="icon">&#8962;</i><a href="/" globalize="go_to_startpage">Go to startpage</a>
     </main>
     <aside></aside>
 </body>
