--- a/404.html
+++ b/404.html
@@ -15,9 +15,9 @@
     <nav></nav>
     <aside></aside>
     <main class="flc fdc bcwhite h100">
-        <a href="./" target="_top"><img class="w15" src="/assets/img/logo.png"></a></figure>
-        <h1 class="z08 mb2" globalize="page_not_found">Page not found</h1>
-        <i class="icon">&#8962;</i><a href="/" globalize="go_to_startpage">Go to startpage</a>
+        <img class="w15" src="/assets/img/logo.svg"></a>
+        <h1 class="mb2 mt1" globalize="page_not_found">Page not found</h1>
+        <a href="/" globalize="go_to_startpage"><i class="icon24 pr2">&#8962;</i>Go to startpage</a>
     </main>
     <aside></aside>
 </body>
