--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <nav></nav>
     <aside></aside>
     <main class="flc fdc bcwhite h100">
-        <img class="w15" src="/assets/img/logo.svg"></a>
+        <img class="w15" src="/assets/img/logo.png"></a>
         <h1 class="mb2 mt1" globalize="page_not_found">Page not found</h1>
         <a href="/" globalize="go_to_startpage"><i class="icon24 pr2">&#8962;</i>Go to startpage</a>
     </main>
