--- a/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
+++ b/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
@@ -19,6 +19,7 @@
     <article class="mt2">
         <p class="fwb">The Aramaic of Tur Abdin (Turabdium) is the Aramaic of Urhoy (Edessa). "Aramaya" became "Suryaya" and "Suryaya" became "Suryoyo".</p>
         <br>
+        <p>Aramaya became the most important dialect of Late Aramaic.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-02, Last update: 2021-07-02</small>
     </article>
