--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -1,6 +1,10 @@
-<script src="https://3el.github.io/front/dist/front.js" template="../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../index;../../research/ethnology/index"></script>
 
 <title globalize="language">Language</title>
+
+<template>
+    <aside index="1" inherit="true"></aside>
+</template>
 
 <article class="pauto">
     <h1 globalize="language">Language</h1>
