--- a/research/ethnology/linguistics/middle_aramaic.html
+++ b/research/ethnology/linguistics/middle_aramaic.html
@@ -1,26 +1,26 @@
 <script src="https://3el.github.io/front/dist/front.js" template="../../../index;../../../research/ethnology/index"></script>
 
-<title globalize="old_aramaic">Old Aramaic</title>
+<title globalize="middle_aramaic">Middle Aramaic</title>
 
 <template>
     <aside index="1" inherit="true"></aside>
 </template>
 
 <section class="pauto">
-    <h1 globalize="old_aramaic">Old Aramaic</h1>
+    <h1 globalize="middle_aramaic">Middle Aramaic</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="research">Research</a></li>
             <li><a href="./research/ethnology" globalize="ethnology">Ethnology</a></li>
             <li><a href="#" globalize="linguistics">Linguistics</a></li>
-            <li globalize="old_aramaic">Old Aramaic</li>
+            <li globalize="middle_aramaic">Middle Aramaic</li>
         </ol>
     </nav>
 
     <article class="mt2">
-        <p>Old Aramaic or Ancient Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah. The language was first spoken by the Arameans.</p>        
+        <p>Middle Aramaic refers to the phase after Late Aramaic ceased to be a living language and dialects began to change.</p>        
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-13, Last update: 2021-07-30</small>
+        <small class="gray">Published: 2021-07-30, Last update: 2021-07-30</small>
     </article>
 
 </section>
