--- a/research/ethnology/linguistics/modern_aramaic.html
+++ b/research/ethnology/linguistics/modern_aramaic.html
@@ -1,6 +1,10 @@
-<script src="https://3el.github.io/front/dist/front.js" template="../../../index"></script>
+<script src="https://3el.github.io/front/dist/front.js" template="../../../index;../../../research/ethnology/index"></script>
 
 <title globalize="modern_aramaic">Modern Aramaic</title>
+
+<template>
+    <aside index="1" inherit="true"></aside>
+</template>
 
 <section class="pauto">
     <h1 globalize="modern_aramaic">Modern Aramaic</h1>
