--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -19,7 +19,7 @@
                     <summary class="white" globalize="language">Language</summary>
                     <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
                     <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic">Official Aramaic</a>
-                    <a href="#" globalize="middle_aramaic">Middle Aramaic</a>
+                    <a href="./research/ethnology/linguistics/middle_aramaic.html" globalize="middle_aramaic">Middle Aramaic</a>
                     <a href="./research/ethnology/linguistics/late_aramaic.html" globalize="late_aramaic">Late Aramaic</a>
                     <a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic">Modern Aramaic</a>
                 </details>
