--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section class="white-">
-                <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
+                <nav class="sidebar pt2 pb2 w100 fs13 gaph2- bcred red pointer afr">
                     <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
                     <hr class="p0">
                     <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
