--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
-        <a href="#menu" class="button xl_du bc0 red- p0 br0 shade1"><i class="icon32">≡</i></a>
+        <a href="#menu" class="button xl_du bc0 red p0 br0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="" target="_self"><img src="assets/img/logo.png"></a></figure>
         <a class="xl_dn" href="research/ethnology" globalize="ethnology">Ethnology</a>
         <a class="xl_dn" href="collection/statistics" globalize="statistics">Statistics</a>
@@ -46,7 +46,7 @@
                 <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section class="white-">
-                <nav class="sidebar pt2 pb2 w100 fs13 gaph2- bcred red pointer afr">
+                <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
                     <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
                     <hr class="p0">
                     <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
