--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div id="navloader" class="navloader pa t0 w100 bcwhite02 d0"><div id="navprogress" class="bcwhite04"></div></div>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
-            <a class="fr bcred yellow p1" href="contribute/" globalize="contribute"><i class="icon">&#9829;</i>Contribute</a>
+            <a class="fr bcred p1" href="contribute/" globalize="contribute"><i class="icon yellow">&#9829;</i>Contribute</a>
             <a class="pr2" href="contact/" globalize="contact">Contact</a>
             <!--<a class="pr2" href="press/">Press</a>-->
             <a class="pr2" href="faq/" globalize="faq">FAQ</a>
