--- a/contribute/index.html
+++ b/contribute/index.html
@@ -18,7 +18,9 @@
         <br>
         <form action="https://www.paypal.com/donate" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
+            <div class="group">
+                <input type="submit" class="button bcred yellow" globalize="page_contribute_text3">
+            </div>
         </form>
 
     </article>
