--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -18,6 +18,53 @@
     
     <section class="mt2">
         <p>Aramaic is a language or group of languages that belong to the Semitic language family. The language has gone through 5 development phases according to the analysis done by Joseph Augustine Fitzmyer and Aaron Butts: <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>, <a href="./research/ethnology/linguistics/official_aramaic.html">Official Aramaic</a>, Middle Aramaic, Late Aramaic, and <a href="./research/ethnology/linguistics/modern_aramaic.html">Modern Aramaic</a>.</p>
+        
+        <table class="mt1 bocred bos5 bw1 z08 w100">
+            <caption class="tal fwb mb1 mt1">
+                <img src="./favicon.ico" class="di" height="24">Language history
+            </caption>
+            <thead class="bcred yellow p1">
+                <tr>
+                    <th globalize="language">Language</th>
+                    <th globalize="dialects">Dialects</th>
+                    <th globalize="date">Date</th>
+                    <th globalize="status">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Old Aramaic</td>
+                    <td>1</td>
+                    <td>925 BC - 700 BC</td>
+                    <td>Extinct</td>
+                </tr>
+                <tr>
+                    <td>Official Aramaic</td>
+                    <td>1</td>
+                    <td>700 BC - 300 BC</td>
+                    <td>Extinct</td>
+                </tr>
+                <tr>
+                    <td>Middle Aramaic</td>
+                    <td>1</td>
+                    <td>300 BC - 100 AD</td>
+                    <td>Extinct</td>
+                </tr>
+                <tr>
+                    <td>Late Aramaic</td>
+                    <td>2</td>
+                    <td>100 AD - 1200 AD</td>
+                    <td>Active</td>
+                </tr>
+                <tr>
+                    <td>Modern Aramaic</td>
+                    <td>20+</td>
+                    <td>1200 AD</td>
+                    <td>Active</td>
+                </tr>
+            </tbody>
+        </table>
+
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2020-09-01, Last update: 2020-12-26</small>
     </section>
