--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -33,31 +33,31 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Old Aramaic</td>
+                    <td globalize="old_aramaic">Old Aramaic</td>
                     <td>1</td>
                     <td>925 BC - 700 BC</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td>Official Aramaic</td>
+                    <td globalize="official_aramaic">Official Aramaic</td>
                     <td>1</td>
                     <td>700 BC - 300 BC</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td>Middle Aramaic</td>
+                    <td globalize="middle_aramaic">Middle Aramaic</td>
                     <td>1</td>
                     <td>300 BC - 100 AD</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td>Late Aramaic</td>
+                    <td globalize="late_aramaic">Late Aramaic</td>
                     <td>2</td>
                     <td>100 AD - 1200 AD</td>
                     <td>Active</td>
                 </tr>
                 <tr>
-                    <td>Modern Aramaic</td>
+                    <td globalize="modern_aramaic">Modern Aramaic</td>
                     <td>20+</td>
                     <td>1200 AD</td>
                     <td>Active</td>
