--- a/article/mor-aday-apostle-thaddeus-syria-urhoy.html
+++ b/article/mor-aday-apostle-thaddeus-syria-urhoy.html
@@ -21,7 +21,7 @@
         <br>
         <p>In the Gospels, Jesus Christ's fame spread far and wide so that sick people from as far away as Syria came to Jesus to be healed (Matthew 4:24).</p>
         <br>
-        <p>An Aramean king named Abgar Ukama, who ruled over the city-state of Urhoy (Edessa), sent messengers to Jesus (John 12:20-24).</p>
+        <p>An Aramean king named Abgar Ukama, who ruled over the city-state of Urhoy (Edessa), sent messengers to Jesus with the hope of being healed (John 12:20-24).</p>
         <br>
         <p>They arrived days before Jesus was crucified. Those messengers were promised by Jesus that he would send one of his disciples to Urhoy (Edessa) to heal the king.</p>
         <br>
