--- a/article/mor-aday-apostle-thaddeus-syria-urhoy.html
+++ b/article/mor-aday-apostle-thaddeus-syria-urhoy.html
@@ -25,7 +25,7 @@
         <br>
         <p>They arrived days before Jesus was crucified. Those messengers were promised by Jesus that he would send one of his disciples to Urhoy (Edessa) to heal the king.</p>
         <br>
-        <p>During the time immediately following the resurrection, Thomas, inspired by Holy Spirit, sent Thaddeus to Urhoy (Edessa), to preach the Good News taught by Jesus Christ, and to heal the King.</p>
+        <p>During the time immediately following the resurrection, Thomas, inspired by Holy Spirit, sent Thaddeus to Urhoy (Edessa), to preach the Good News taught by Jesus Christ, and to heal their King.</p>
         <br>
         <p>Thaddeus preached to the Arameans in Syria and they believed and were converted, and the King was healed as well.
         <hr class="mt2 bcblack">
