--- a/article/mor-aday-apostle-thaddeus-syria-urhoy.html
+++ b/article/mor-aday-apostle-thaddeus-syria-urhoy.html
@@ -1,6 +1,6 @@
 <script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
 
-<title>Apostle Thaddeus in Aram (Syria)</title>
+<title>Apostolic mission of Thaddeus in Aram (Syria)</title>
 
 <template>
     <aside index="0"></aside>
@@ -8,11 +8,11 @@
 </template>
 
 <section class="pauto">
-    <h1>Apostle Thaddeus in Aram (Syria)</h1>
+    <h1>Apostolic mission of Thaddeus in Aram (Syria)</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="article">Article</a></li>
-            <li>Apostle Thaddeus in Aram (Syria)</li>
+            <li>Apostolic mission of Thaddeus in Aram (Syria)</li>
         </ol>
     </nav>
 
