--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
-    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;globalize"></script>
-    <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
+    <script src="https://3el.github.io/front/dist/front.js" lib="popup;nav;json;globalize"></script>
+    <!--<script src="http://localhost:8888/dist/front.js" lib="popup;nav;json;globalize"></script>-->
     <script src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0" async></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-4Z8JXR2XX0')</script>
 </head>
